fix(PyTorch_Training_Pipeline): correct bias update in training loop
feat: add new notebooks for PyTorch NN modules and training pipeline

--- a/PyTorch_Training_Pipeline _NN_Module.ipynb
+++ b/PyTorch_Training_Pipeline _NN_Module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "id": "4af30994",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,14 @@
     "import numpy  as np \n",
     "import pandas as pd\n",
     "import torch\n",
+    "import torch.nn  as nn\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler,LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "id": "6c1d1e3b",
    "metadata": {},
    "outputs": [
@@ -229,7 +230,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "id": "1535b4e6",
    "metadata": {},
    "outputs": [
@@ -454,7 +455,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "id": "3b8c8265",
    "metadata": {},
    "outputs": [],
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "id": "060948c1",
    "metadata": {},
    "outputs": [],
@@ -488,28 +489,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "id": "ac04d507",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "56     M\n",
-       "45     M\n",
-       "206    B\n",
-       "228    B\n",
-       "281    B\n",
+       "1      M\n",
+       "279    B\n",
+       "416    B\n",
+       "386    B\n",
+       "340    B\n",
        "      ..\n",
-       "238    B\n",
-       "479    M\n",
-       "40     M\n",
-       "382    B\n",
-       "81     B\n",
+       "108    M\n",
+       "189    B\n",
+       "550    B\n",
+       "443    B\n",
+       "253    M\n",
        "Name: diagnosis, Length: 455, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "id": "afbcdf37",
    "metadata": {},
    "outputs": [],
@@ -540,37 +541,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "id": "c675ff5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0,\n",
-       "       1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0,\n",
-       "       1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0,\n",
-       "       0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0,\n",
-       "       1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0,\n",
-       "       1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0,\n",
-       "       1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0,\n",
-       "       1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0,\n",
-       "       1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1,\n",
-       "       1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0,\n",
-       "       0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0,\n",
-       "       0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1,\n",
-       "       0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0])"
+       "array([1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1,\n",
+       "       1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0,\n",
+       "       0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0,\n",
+       "       0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0,\n",
+       "       1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0,\n",
+       "       0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1,\n",
+       "       0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0,\n",
+       "       1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1,\n",
+       "       0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0,\n",
+       "       1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0,\n",
+       "       1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0,\n",
+       "       1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
+       "       0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,41 +590,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "id": "2c0c0bb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_tensor = torch.from_numpy(X_train)\n",
-    "X_test_tensor = torch.from_numpy(X_test)\n",
-    "y_train_tensor = torch.from_numpy(y_train)\n",
-    "y_test_tensor = torch.from_numpy(y_test)"
+    "X_train_tensor = torch.from_numpy(X_train.astype(np.float32))\n",
+    "X_test_tensor = torch.from_numpy(X_test.astype(np.float32))\n",
+    "y_train_tensor = torch.from_numpy(y_train.astype(np.float32))\n",
+    "y_test_tensor = torch.from_numpy(y_test.astype(np.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "id": "41d133d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([114, 30])"
+       "torch.float32"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test_tensor.shape"
+    "X_test_tensor.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 84,
    "id": "7968db70",
    "metadata": {},
    "outputs": [
@@ -633,7 +634,7 @@
        "torch.Size([455])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,27 +653,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "id": "e9b1addb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MySimpleNN():\n",
-    "    def __init__(self,X):\n",
-    "        self.weights = torch.rand(X.shape[1],1,dtype=float,requires_grad=True)\n",
-    "        self.bias = torch.zeros(1,dtype=float,requires_grad=True)\n",
+    "class MySimpleNN(nn.Module):\n",
     "\n",
-    "    def forward(self,X):\n",
-    "        z = torch.matmul(X,self.weights) + self.bias\n",
-    "        y_pred = torch.sigmoid(z)\n",
-    "        return y_pred\n",
+    "    def __init__(self,num_features):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(num_features,1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
-    "    def loss_function(self,y_pred,y):\n",
-    "        epsilon = 1e-7\n",
-    "        y_pred = torch.clamp(y_pred,epsilon,1-epsilon)\n",
+    "    def forward(self,features):\n",
+    "        out = self.linear(features)\n",
+    "        out = self.sigmoid(out)\n",
     "\n",
-    "        loss = -(y * torch.log(y_pred) + (1 - y) * torch.log(1-y_pred)).mean()\n",
-    "        return loss"
+    "        return out\n",
+    "    "
    ]
   },
   {
@@ -685,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "id": "6e92d8b3",
    "metadata": {},
    "outputs": [],
@@ -703,8 +701,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb91cfef",
+   "metadata": {},
+   "source": [
+    "### Defining loss function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
+   "id": "13c8df4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_function =nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a429c8f0",
+   "metadata": {},
+   "source": [
+    "### Defining optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "id": "ece2b7ee",
    "metadata": {},
    "outputs": [
@@ -712,63 +736,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Loss: 3.306018887003788\n",
-      "Epoch: 2, Loss: 3.1609376663907445\n",
-      "Epoch: 3, Loss: 3.014299147433443\n",
-      "Epoch: 4, Loss: 2.858887488541681\n",
-      "Epoch: 5, Loss: 2.698801806296488\n",
-      "Epoch: 6, Loss: 2.5332165973293135\n",
-      "Epoch: 7, Loss: 2.362263330494803\n",
-      "Epoch: 8, Loss: 2.1907508149121435\n",
-      "Epoch: 9, Loss: 2.0224996657625507\n",
-      "Epoch: 10, Loss: 1.8539996050043417\n",
-      "Epoch: 11, Loss: 1.6912442702070825\n",
-      "Epoch: 12, Loss: 1.5349099354662594\n",
-      "Epoch: 13, Loss: 1.3890053068167993\n",
-      "Epoch: 14, Loss: 1.259443250456265\n",
-      "Epoch: 15, Loss: 1.1483843385733103\n",
-      "Epoch: 16, Loss: 1.056994865641595\n",
-      "Epoch: 17, Loss: 0.9849905681331456\n",
-      "Epoch: 18, Loss: 0.9306186441117732\n",
-      "Epoch: 19, Loss: 0.8909569128854326\n",
-      "Epoch: 20, Loss: 0.8625123689425845\n",
-      "Epoch: 21, Loss: 0.8420026635271777\n",
-      "Epoch: 22, Loss: 0.8268508729429983\n",
-      "Epoch: 23, Loss: 0.8152466120114991\n",
-      "Epoch: 24, Loss: 0.8059940784987747\n",
-      "Epoch: 25, Loss: 0.7983287129330847\n"
+      "Epoch: 1, Loss: 0.7881790995597839\n",
+      "Epoch: 2, Loss: 0.564128577709198\n",
+      "Epoch: 3, Loss: 0.4549614489078522\n",
+      "Epoch: 4, Loss: 0.39305195212364197\n",
+      "Epoch: 5, Loss: 0.3525105118751526\n",
+      "Epoch: 6, Loss: 0.32346975803375244\n",
+      "Epoch: 7, Loss: 0.301400363445282\n",
+      "Epoch: 8, Loss: 0.2839125990867615\n",
+      "Epoch: 9, Loss: 0.269616961479187\n",
+      "Epoch: 10, Loss: 0.25764575600624084\n",
+      "Epoch: 11, Loss: 0.24742713570594788\n",
+      "Epoch: 12, Loss: 0.23856760561466217\n",
+      "Epoch: 13, Loss: 0.23078681528568268\n",
+      "Epoch: 14, Loss: 0.22387906908988953\n",
+      "Epoch: 15, Loss: 0.21768979728221893\n",
+      "Epoch: 16, Loss: 0.21210022270679474\n",
+      "Epoch: 17, Loss: 0.20701764523983002\n",
+      "Epoch: 18, Loss: 0.20236825942993164\n",
+      "Epoch: 19, Loss: 0.19809271395206451\n",
+      "Epoch: 20, Loss: 0.19414256513118744\n",
+      "Epoch: 21, Loss: 0.19047777354717255\n",
+      "Epoch: 22, Loss: 0.18706507980823517\n",
+      "Epoch: 23, Loss: 0.1838764250278473\n",
+      "Epoch: 24, Loss: 0.18088802695274353\n",
+      "Epoch: 25, Loss: 0.17807959020137787\n"
      ]
     }
    ],
    "source": [
     "# create model\n",
-    "model = MySimpleNN(X_train_tensor)\n",
+    "model = MySimpleNN(X_train_tensor.shape[1])\n",
     "\n",
+    "\n",
+    "# define optimizer\n",
+    "optimizer = torch.optim.SGD(model.parameters(),lr = learning_rate)\n",
     "# define loop\n",
     "\n",
     "for epoch in range(epochs):\n",
     "\n",
     "    # forward pass\n",
-    "    y_pred = model.forward(X_train_tensor)\n",
+    "    y_pred = model(X_train_tensor)\n",
     "\n",
     "\n",
     "    # loss calculate\n",
-    "    loss = model.loss_function(y_pred,y_train_tensor)\n",
+    "    loss = loss_function(y_pred,y_train_tensor.view(-1,1))\n",
+    "\n",
+    "    # clear gradients\n",
+    "    optimizer.zero_grad()\n",
     "\n",
     "    # backward pass\n",
     "    loss.backward()\n",
     "\n",
     "    # parameter update\n",
-    "    with torch.no_grad():\n",
-    "        model.weights -= learning_rate * model.weights.grad\n",
-    "        model.bias -= learning_rate * model.bias.grad\n",
+    "    optimizer.step()\n",
     "\n",
-    "    # zero grad\n",
-    "    model.weights.grad.zero_()\n",
-    "    model.bias.grad.zero_()\n",
+    "\n",
     "\n",
     "    # print loss in each epochs\n",
     "    print(f\"Epoch: {epoch+1}, Loss: {loss.item()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "c8f79d2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[ 0.1912,  0.3009,  0.3584,  0.0774,  0.1131, -0.0004,  0.3316,  0.2762,\n",
+       "          0.0154, -0.1259,  0.1693,  0.0221,  0.1003,  0.1258, -0.0609, -0.0498,\n",
+       "         -0.0936,  0.2609, -0.0684,  0.0757,  0.3155,  0.1387,  0.3496,  0.1398,\n",
+       "          0.0575,  0.1015,  0.2987,  0.2219,  0.3380,  0.0553]],\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.linear.weight"
    ]
   },
   {
@@ -781,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "id": "4239912b",
    "metadata": {},
    "outputs": [
@@ -789,14 +841,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score:-> 0.6169590353965759\n"
+      "Accuracy Score:-> 0.5492458939552307\n"
      ]
     }
    ],
    "source": [
     "with torch.no_grad():\n",
     "    y_pred = model.forward(X_test_tensor)\n",
-    "    y_pred = (y_pred > 0.7).float()\n",
+    "    y_pred = (y_pred > 0.5).float()\n",
     "    accuracy = (y_pred == y_test_tensor).float().mean()\n",
     "    print(f\"Accuracy Score:-> {accuracy}\")"
    ]
